# ColibriTest

./: CMakeLists.txt  Main.qml  calqlatr.qmlproject.qtds  fonts.qrc  main.cpp
content/: BackspaceButton.qml  CalculatorButton.qml  Display.qml  NumberPad.qml  calculator.js  secretMenu.qml
